@@ -1,4 +1,6 @@
 v2.10.1.
+  * fix error reporting in recipes; add newrelic_rails_env option to recipes to 
+    override the rails env used to pull the app_name out of newrelic.yml
   * added TorqueBox recognition (thanks Bob McWhirter)
   * renamed config settings: enabled => monitor_mode; developer => developer_mode;
     old names will still work in newrelic.yml
